# ugc

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compos.prod.yml  docker-compose.tests.yml  docker-compose.yml  example.env  pyproject.toml  tasks.md  tests.Dockerfile
.github/workflows/: checks.yml
ELK/: docker-compose.yml
ELK/deploy/: logstash.conf
architecture/: UGC.drawio  as_is.plantuml  to_be.plantuml
auth/: .flake8  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  example.env  pyproject.toml
auth/auth/: main.py  wsgi.py
benchmark/clickhouse/: README.md
benchmark/sprint_9/: README.md  base_benchmark.py  test_ch.ipynb  test_mongo.ipynb
ch_conf/: README.md  docker-compose.yml
ch_conf/node1/: config.xml
ch_conf/node2/: config.xml
ch_conf/node3/: config.xml
ch_conf/node4/: config.xml
ch_conf/node6/: config.xml
ch_conf/sql/: node1.sql  node3.sql  node5.sql
etl/: .flake8  main.py  pyproject.toml
etl/core/: config.py
etl/models/: event.py
etl/services/: clickhouse.py
etl/src/: main.py
homework/arch/: README.md  as_is.plantuml  to_be.plantuml
homework/clickhouse/: README.md  task_01.ipynb
homework/kafka/: README.md
homework/spark/: Dockerfile  README.md  docker-compose.yml  hello_world.ipynb  hello_world_part_2.ipynb  task_01.ipynb  task_02.ipynb
kafka/: consumer.py  docker-compose.yml  main.py
mongo_cnf/: Dockerfile  README.md  mongocfg1.js  mongors1n1.js  mongors2n1.js  mongos1.js  run.sh  setup.sh  ugc_db.js
nginx/: nginx.conf
nginx/configs/: auth.conf  (+1 more)
(+148 files in other folders)
